@@ -1,3 +1,4 @@
+- Show last 10 modified tasks in a submenu.
 - Move project names to the right column in the indicator menu, like the date time applet does for time zones.  How is this done?
 - Open as many task properties dialogs as necessary.
 - Calculate urgency according to the man page.
