@@ -1,3 +1,8 @@
+2013/11/07 (version 1.13)
+
+- Use real task urgency, which tasks are now sorted by.
+
+
 2013/11/06 (version 1.12)
 
 - Fixed a bug with tasks that have no project assigned.
